--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,21 +21,23 @@
           android:windowSoftInputMode="adjustPan"
           package="de.unibi.grundschrift"
           android:versionName="1.0"
-          android:versionCode="3"
+          android:versionCode="10"
           android:hardwareAccelerated="true">
 
+
     <supports-screens
+        android:normalScreens="false"
+        android:requiresSmallestWidthDp="600"
+        android:smallScreens="false"
         android:largeScreens="true"
-        android:normalScreens="true"
-        android:smallScreens="true"
         android:xlargeScreens="true"
         android:resizeable="true"
         android:anyDensity="true"
         />
 
+    <!--<uses-permission android:name="android.permission.CAMERA" />-->
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
 
-
-    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -60,5 +62,5 @@
 
     </application>
 
-    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="17"/>
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
 </manifest> 
