--- a/config.json
+++ b/config.json
@@ -39,7 +39,7 @@
 
 	"comments": {
 		"Concatenating js and css files": "cmd /c tools\\deploy.bat",
-		"node enyo/tools/minifier/minify.js -enyo ./enyo package.js -no-alias -less -output build/build": 1,
+		"node enyo/tools/minifier/minify.js -enyo ./enyo package.js -no-alias -less -output build/build": 1
 	},
 
 
